--- a/listings.html
+++ b/listings.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hunt Realty Listings</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       background-color: #D8D5D5;
