--- a/listings.html
+++ b/listings.html
@@ -164,7 +164,7 @@
 
       <div class="listing">
         <img src="https://images.vexels.com/media/users/3/157214/isolated/preview/a4830aaca7c432fbab084a9adf31e067-flat-house-icon.png" alt="All Other Listings">
-        <a href="https://ericahunt.bluegrasshomegroup.com/details.php?mls=88&mlsid=25007917">
+        <a href="https://ericahunt.bluegrasshomegroup.com/index.php?agentcodes=20394#rslt">
           All Other Listings
         </a>
       </div>
