--- a/contact.html
+++ b/contact.html
@@ -85,12 +85,10 @@
         
 			<nav>
             <ul>
-             <li><a href="home.html">Home</a></li>
-             <li><a href="aboutme.html">About Me</a></li>
-             <li><a href="videos.html">Videos</a></li>
-             <li><a href="gallery.html">Gallery</a></li>
-             <li><a href="performanceschedule.html">Performance Schedule</a></li>
-             <li><a href="contact.html">Contact</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="listings.html">Listings</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 		
